--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 os: osx
 osx_image: xcode12.3
 language: swift
-script: xcodebuild clean build test -project Users/josefsantamaria/Documents/Xcode/Home\ Active\ Man .xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+script: xcodebuild clean build test -project santaj/Home-Active-Lead.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
